@@ -1,4 +1,5 @@
 27 Oct, 2018
+update: wrap sql errors in pre tabs log_viewer.php
 update: remove filesize limits log_viewer.php
 update: function_breadcrumbs.php
 update: pagination to log_viewer.php
